# Trawler

./: CMakeLists.txt  MangastreamParser.cpp  MangastreamParser.h  README.md  ReadmngParser.cpp  ReadmngParser.h  SiteParser.h  main.cpp
lib/: libcurlpp.so.0.0.2  libutilspp.so.0.0.0
